examples/tests/compile_fail/implicit_signedness_fail.zl
fun main() >> i32 {
    i32 a = 5;
    u32 b = a;
    return 0;
}
